# Vala-Brother-Label

./: README.md  Vala-Brother-Label.code-workspace  meson.build  meson_options.txt
src/: application.vala  backendgeneric.vala  backendusb.vala  config.vala.in  deviceidentifier.vala  labels.vala
